# drsolve-cross

./: .gitignore  BUILDING.md  CMakeLists.txt  Makefile  README.md  Untitled.ipynb  Untitled1.ipynb  config.mk  configure  dixon  dixon.c  drsolve.c  drsolve_sage_interface.sage  example.dr  example_solve.dr  solution.dr  solution_20260430_063017.dr  test5-s.txt  test5.txt  vision-1r.c  vision-1r.sage  vision-2r.c  vision-2r.sage  vision-3r.c  vision-3r.sage  vision-3r.sage.py  vision-4r.c  vision-4r.sage  xhash-C1s2-m3.c  xhash-C1s3-m3.c  xhash-C1s3-m3.sage  xhash-C1s3-m3.sage.py  xhash-C2s2-m1+3.c  xhash-C2s2-m1+3.sage  xhash.sage
.github/workflows/: CI.yml
cmake/: FetchMSYS2Package.cmake  toolchain-mingw64.cmake
include/: complex_solver.h  dixon_complexity.h  dixon_fast_flint.h  dixon_flint.h  dixon_interface_flint.h  dixon_recursive.h  dixon_test.h  dixon_with_ideal_reduction.h  drsolve_cli.h  fmpq_acb_roots.h  fq_mpoly_mat_det.h  fq_multivariate_interpolation.h  fq_mvpoly.h  fq_poly_mat_det.h  fq_sparse_interpolation.h  fq_unified_interface.h  gf2n_field.h  gf2n_mpoly.h  gf2n_poly.h  large_prime_system_solver.h  macaulay_flint.h  polynomial_system_solver.h  rational_system_solver.h  unified_mpoly_det.h
pml_det/: README.md  pml_det.h
pml_det/src/: nmod_mat_poly.h  nmod_poly_mat_approximant.h  nmod_poly_mat_extra.h  nmod_poly_mat_kernel.h  nmod_vec_extra.h
pml_det/src/nmod_mat_poly_extra/: nmod_mat_poly_mbasis.c  nmod_mat_poly_mbasis_resupdate.c
pml_det/src/nmod_poly_mat_extra/: approximant_basis.c  kernel.c  nmod_poly_mat_det.c
pml_det/src/nmod_vec_extra/: nmod_vec_dot_product.c
src/: complex_solver.c  dixon_complexity.c  dixon_fast_flint.c  dixon_flint.c  dixon_interface_flint.c  dixon_recursive.c  dixon_test.c  dixon_with_ideal_reduction.c  drsolve_cli.c  fmpq_acb_roots.c  fq_mat_det.c  fq_mpoly_mat_det.c  fq_multivariate_interpolation.c  fq_mvpoly.c  fq_nmod_roots.c  fq_poly_mat_det.c  fq_sparse_interpolation.c  fq_unified_interface.c  gf2n_field.c  gf2n_mpoly.c  gf2n_poly.c  large_prime_system_solver.c  macaulay_flint.c  polynomial_system_solver.c  rational_system_solver.c  resultant_with_ideal_reduction.c  unified_mpoly_det.c  unified_mpoly_interface.c  unified_mpoly_resultant.c
test/: ideal.dr  ideal1.dr  ideal2.dr
win_gui/: dixon_gui.c  dixon_launcher.c  dixon_wrapper.c  dixon_wrapper.h
